<resources>
    <string name="app_name">MyNews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_query_term">Search query term</string>
    <string name="end_date">End date</string>
    <string name="begin_date">Begin date</string>
    <string name="art">art</string>
    <string name="arts">Arts</string>
    <string name="politics">Politics</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="travel">Travel</string>
    <string name="button_search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="switch_notif">Switch</string>
    <string name="boxArts">boxArts</string>
    <string name="nyt_image">NYT_Image</string>
    <!--Used in NavigationDrawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
