<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Declare search-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_searchLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        app:helperText="Field can't be empty"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_Search"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_query_term"
            android:nextFocusDown="@id/et_beginDate"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>