<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/checkbox_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/checkbox_arts"
...
        android:layout_alignTop="@id/checkbox_arts"
        android:layout_marginStart="200dp"
        android:text="@string/politics"
        android:buttonTint="@color/colorAccent"/>

    <CheckBox
        android:id="@+id/checkbox_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:text="@string/business"
        android:buttonTint="@color/colorAccent"/>
...
