<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/baseline_search_white_48"
        app:showAsAction="ifRoom"
        android:title="@string/search">
    </item>

    <item
        android:id="@+id/notif"
        android:title="@string/notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>